unpackaged/main/default/objects/Meta_del_Plan__c/Meta_del_Plan__c.object-meta.xml
<CustomObject>
    <label>Meta del Plan</label>
    <nameField>
        <label>Meta Grupal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metas del Plan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>