unpackaged/main/default/objects/Meta_del_Plan__c/fields/Comision_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Comision_Buscar__c</fullName>
    <label>Comisión</label>
    <referenceTo>Comision__c</referenceTo>
    <relationshipLabel>Metas del Plan</relationshipLabel>
    <relationshipName>Metas_del_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>