unpackaged/main/default/objects/Meta_del_Plan__c/fields/Meta_Individual__c.field-meta.xml
<CustomField>
    <fullName>Meta_Individual__c</fullName>
    <label>Meta Individual</label>
    <length>10</length>
    <type>Text</type>
</CustomField>