unpackaged/main/default/objects/Meta_del_Plan__c/fields/Num_Miembros__c.field-meta.xml
<CustomField>
    <fullName>Num_Miembros__c</fullName>
    <label># Miembros</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>